// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartLegend 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="height: 100%; width: 100%; pointer-events: none; position: relative;"
  >
    <svg
      height="300"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 300"
      width="450"
    >
      <rect
        height="14"
        role="presentation"
        shape-rendering="auto"
        style="fill: none;"
        vector-effect="non-scaling-stroke"
        width="79.2"
        x="0"
        y="0"
      />
      <path
        d="M 9.128, 18.872
      h9.744
      v-9.744
      h-9.744
      z"
        role="presentation"
        shape-rendering="auto"
        style="fill: var(--pf-v5-chart-theme--blue--ColorScale--100, #06c);"
      />
      <path
        d="M 48.728, 18.872
      h9.744
      v-9.744
      h-9.744
      z"
        role="presentation"
        shape-rendering="auto"
        style="fill: var(--pf-v5-chart-theme--blue--ColorScale--200, #8bc1f7);"
      />
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="30.8"
        y="18.97"
      >
        <tspan
          dx="0"
          dy="0"
          style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-global--label--Fill, #151515);"
          text-anchor="start"
          x="30.8"
        >
          Series 1
        </tspan>
      </text>
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="70.39999999999999"
        y="18.97"
      >
        <tspan
          dx="0"
          dy="0"
          style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-global--label--Fill, #151515);"
          text-anchor="start"
          x="70.39999999999999"
        >
          Series 2
        </tspan>
      </text>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="300"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartLegend 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="height: 100%; width: 100%; pointer-events: none; position: relative;"
  >
    <svg
      height="300"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 300"
      width="450"
    >
      <rect
        height="14"
        role="presentation"
        shape-rendering="auto"
        style="fill: none;"
        vector-effect="non-scaling-stroke"
        width="79.2"
        x="0"
        y="0"
      />
      <path
        d="M 9.128, 18.872
      h9.744
      v-9.744
      h-9.744
      z"
        role="presentation"
        shape-rendering="auto"
        style="fill: var(--pf-v5-chart-theme--blue--ColorScale--100, #06c);"
      />
      <path
        d="M 48.728, 18.872
      h9.744
      v-9.744
      h-9.744
      z"
        role="presentation"
        shape-rendering="auto"
        style="fill: var(--pf-v5-chart-theme--blue--ColorScale--200, #8bc1f7);"
      />
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="30.8"
        y="18.97"
      >
        <tspan
          dx="0"
          dy="0"
          style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-global--label--Fill, #151515);"
          text-anchor="start"
          x="30.8"
        >
          Series 1
        </tspan>
      </text>
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="70.39999999999999"
        y="18.97"
      >
        <tspan
          dx="0"
          dy="0"
          style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-global--label--Fill, #151515);"
          text-anchor="start"
          x="70.39999999999999"
        >
          Series 2
        </tspan>
      </text>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="300"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="height: 100%; width: 100%; pointer-events: none; position: relative;"
  >
    <svg
      height="50"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 200 50"
      width="200"
    >
      <rect
        height="18"
        role="presentation"
        shape-rendering="auto"
        style="fill: none;"
        vector-effect="non-scaling-stroke"
        width="79.2"
        x="0"
        y="0"
      />
      <path
        d="M 9.128, 22.872
      h9.744
      v-9.744
      h-9.744
      z"
        role="presentation"
        shape-rendering="auto"
        style="fill: var(--pf-v5-chart-theme--blue--ColorScale--100, #06c);"
      />
      <path
        d="M 48.728, 22.872
      h9.744
      v-9.744
      h-9.744
      z"
        role="presentation"
        shape-rendering="auto"
        style="fill: var(--pf-v5-chart-theme--blue--ColorScale--200, #8bc1f7);"
      />
      <text
        direction="inherit"
        dx="0"
        id="legend-title-all"
        x="2"
        y="13.969999999999999"
      >
        <tspan
          dx="0"
          dy="0"
          style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 2px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-global--label--Fill, #151515);"
          text-anchor="start"
          x="2"
        >
          Average number of pets
        </tspan>
      </text>
      <text
        direction="inherit"
        dx="0"
        id="test4"
        x="30.8"
        y="22.97"
      >
        <tspan
          dx="0"
          dy="0"
          style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-global--label--Fill, #151515);"
          text-anchor="start"
          x="30.8"
        >
          Cats
        </tspan>
      </text>
      <text
        direction="inherit"
        dx="0"
        id="test4"
        x="70.39999999999999"
        y="22.97"
      >
        <tspan
          dx="0"
          dy="0"
          style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-global--label--Fill, #151515);"
          text-anchor="start"
          x="70.39999999999999"
        >
          Dogs
        </tspan>
      </text>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="50"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 200 50"
        width="200"
      />
    </div>
  </div>
</DocumentFragment>
`;
